# Python_Web_HW_10_1

./: pyproject.toml
hw_project/: .env
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: admin.py  connect.py  forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_born_date.py  0004_alter_quote_author_alter_quote_tags.py
hw_project/quotes/static/quotes/: main.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  models.py  views.py
hw_project/users/migrations/: 0001_initial.py
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: migration.py
